--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,9 +79,9 @@ exclude = '''
 
 [tool.isort]
 profile = "black"
-known_first_party = "image_recommender"
-packages = ["python_image_recommender"]
-src_paths = ["image-recommender", "tests"]
+known_first_party = "Pixelio_Project"
+packages = ["python_Pixelio_Project"]
+src_paths = ["Pixelio-Project"]
 line_length = "100"
 
 [tool.pylint]  # If you opt to use pylint
